--- a/style.css
+++ b/style.css
@@ -7,15 +7,21 @@ h1 {
     font-size: 500%;
 }
 
+h2 {
+    text-align: center;
+    font-size: 300%;
+}
+
 .buttons {
     display: flex;
     justify-content: space-evenly;
 }
 
-.score {
+#score {
     display: flex;
     justify-content: space-evenly;
     font-size: 250%;
+    font-weight: bolder;
 }
 
 .choice {
@@ -29,6 +35,6 @@ button:hover {
 }
 
 .choosing {
-    transform: scale(1.2);
-    transition-duration: 0.5s;
+    transform: scale(1.1);
+    transition-duration: 0.1s;
 }
